--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,3 +5,5 @@ Imports:
     knitr,
     rmarkdown
 Encoding: UTF-8
+URL: https://github.com/MariaMartens/LearnR3
+BugReports: https://github.com/MariaMartens/LearnR3/issues
